--- a/machine-learning/Parameter and SearchSpace.ipynb
+++ b/machine-learning/Parameter and SearchSpace.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
-     "language": "csharp"
+     "language": "markdown"
     }
    },
    "source": [
-    "AutoML.Net has a great extensibility and allows you to define your own search space. There're two ways to define a search space: via scratch and via attribution. Via scratch gives you more flexibility while via attribution is more readable. And both ways are equivalant.\n",
+    "You can create your own search space in AutoML.Net. There're two ways to define a search space: via scratch and via attribution. Via scratch gives you more flexibility while via attribution is more readable. And both ways are equivalant.\n",
     "\n",
     "In this notebook, we will go through a series of topics on search space\n",
     "- available options in search space\n",
