update according to comment

--- a/machine-learning/Parameter and SearchSpace.ipynb
+++ b/machine-learning/Parameter and SearchSpace.ipynb
@@ -8,12 +8,22 @@
     }
    },
    "source": [
-    "You can create your own search space in AutoML.Net. There're two ways to define a search space: via scratch and via attribution. Via scratch gives you more flexibility while via attribution is more readable. And both ways are equivalant.\n",
+    "In AutoML.Net, `SearchSpace` defines the hyper-parameter searching range of a sweepable pipeline or a sweepable estimator and `Parameter` is the sampled result from a `SearchSpace`, which can be used to restore an estimator or a pipeline.\n",
+    "\n",
+    "`SearchSpace` has a great impact on automl performance. In theory, it decides the upper-bound of an automl model. A larger `SearchSpace` usually means an increasing potential of finding a better model. In practice though, there's also a trade-off and a larger `SearchSpace` doesn't always mean better considering the searching complexity and increasing training cost.\n",
+    "\n",
+    "AutoML.Net provides a default `SearchSpace` for almost all available ML.Net trainers. However, it also allows you to provide your own search space if the default one doesn't meet your request.\n",
     "\n",
     "In this notebook, we will go through a series of topics on search space\n",
-    "- available options in search space\n",
-    "- create search space from scratch && it's equivalant way via attribution api.\n",
-    "- default search space for mlnet trainers."
+    "- default search space for mlnet trainers.\n",
+    "- how to customize search space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Install nuget dependency"
    ]
   },
   {
@@ -40,6 +50,15 @@
     {
      "data": {
       "text/markdown": [
+       "Loading extensions from `Microsoft.ML.AutoML.Interactive.dll`"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
        "Loading extensions from `Microsoft.Data.Analysis.Interactive.dll`"
       ]
      },
@@ -50,15 +69,6 @@
      "data": {
       "text/markdown": [
        "Loading extensions from `Plotly.NET.Interactive.dll`"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "Loading extensions from `Microsoft.ML.AutoML.Interactive.dll`"
       ]
      },
      "metadata": {},
@@ -97,34 +107,18 @@
     "using Microsoft.ML.AutoML;\n",
     "using Microsoft.ML.Data;\n",
     "using Microsoft.ML.SearchSpace;\n",
-    "using Newtonsoft.Json;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   },
-   "source": [
-    "# Available options in search space.\n",
-    "AutoML.Net search space supports multiple options which should be enough to cover most of usage cases. In summary, it supports\n",
-    "- numeric option - an option that is numeric type, like float, double, int...\n",
-    "- choice option - an option that is descrete, like string or boolean.\n",
-    "- nested option - an option that itself is also a search space.\n",
-    "\n",
-    "Underlying, a search space is no more than a json object, where key is option name and value is its value as another json object. This is also how search space supports nested search space. In general, there's no strong limitation on the type of option as long as it can be saved as json, but in practice, it's better to use primitive type since it's well tested.\n",
-    "\n",
-    "Once after you create a search space, a n-dimension linear space will be associated with that search space where `n` depends on the # of options and dimension of that option. During hpo, tuner will sample on that n-dimension linear space instead of original options. This feature makes option being transparent to tuner and greatly simplify the implementation of tuner."
+    "using Newtonsoft.Json;\n",
+    "using Microsoft.ML.SearchSpace.Option;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# create search space from scratch\n",
-    "The following code shows how to create a search space from scratch and print it out as a json string."
+    "# Default search space for ml.net trainer\n",
+    "AutoML.Net comes with a series of default search space for most of ml.net trainers. You can check it under `Microsoft.ML.AutoML.CodeGen` namespace. The following code shows the default search space for LightGbm.\n",
+    "\n",
+    "The default search space will be used in `AutoFeaturizer` and `AutoTrainer` api, which provides an easy way to create sweepable estimators."
    ]
   },
   {
@@ -140,12 +134,165 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "search space dimension: 6\r\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{\r\n",
+       "  \"NumberOfLeaves\": {\r\n",
+       "    \"Min\": 4.0,\r\n",
+       "    \"Max\": 1024.0,\r\n",
+       "    \"LogBase\": true,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      0.0\r\n",
+       "    ]\r\n",
+       "  },\r\n",
+       "  \"MinimumExampleCountPerLeaf\": {\r\n",
+       "    \"Min\": 20.0,\r\n",
+       "    \"Max\": 1024.0,\r\n",
+       "    \"LogBase\": true,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      0.0\r\n",
+       "    ]\r\n",
+       "  },\r\n",
+       "  \"LearningRate\": {\r\n",
+       "    \"Min\": 2E-10,\r\n",
+       "    \"Max\": 1.0,\r\n",
+       "    \"LogBase\": true,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      1.0\r\n",
+       "    ]\r\n",
+       "  },\r\n",
+       "  \"NumberOfTrees\": {\r\n",
+       "    \"Min\": 4.0,\r\n",
+       "    \"Max\": 32768.0,\r\n",
+       "    \"LogBase\": true,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      0.0\r\n",
+       "    ]\r\n",
+       "  },\r\n",
+       "  \"SubsampleFraction\": {\r\n",
+       "    \"Min\": 2E-10,\r\n",
+       "    \"Max\": 1.0,\r\n",
+       "    \"LogBase\": true,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      1.0\r\n",
+       "    ]\r\n",
+       "  },\r\n",
+       "  \"MaximumBinCountPerFeature\": {\r\n",
+       "    \"Min\": 8.0,\r\n",
+       "    \"Max\": 1024.0,\r\n",
+       "    \"LogBase\": true,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      0.7142857142857141\r\n",
+       "    ]\r\n",
+       "  },\r\n",
+       "  \"FeatureFraction\": {\r\n",
+       "    \"Min\": 2E-10,\r\n",
+       "    \"Max\": 1.0,\r\n",
+       "    \"LogBase\": false,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      1.0\r\n",
+       "    ]\r\n",
+       "  },\r\n",
+       "  \"L1Regularization\": {\r\n",
+       "    \"Min\": 2E-10,\r\n",
+       "    \"Max\": 1.0,\r\n",
+       "    \"LogBase\": true,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      0.0\r\n",
+       "    ]\r\n",
+       "  },\r\n",
+       "  \"L2Regularization\": {\r\n",
+       "    \"Min\": 2E-10,\r\n",
+       "    \"Max\": 1.0,\r\n",
+       "    \"LogBase\": true,\r\n",
+       "    \"FeatureSpaceDim\": 1,\r\n",
+       "    \"Step\": [\r\n",
+       "      null\r\n",
+       "    ],\r\n",
+       "    \"Default\": [\r\n",
+       "      1.0\r\n",
+       "    ]\r\n",
+       "  }\r\n",
+       "}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using Microsoft.ML.AutoML.CodeGen;\n",
+    "var lgbmSearchSpace = new SearchSpace<LgbmOption>();\n",
+    "\n",
+    "// refine search space if necessary\n",
+    "lgbmSearchSpace[\"NumberOfLeaves\"] = new UniformIntOption(4, 1024, true, 4);\n",
+    "\n",
+    "// pass lgbmSearchSpace in AutoTrainer\n",
+    "var context = new MLContext();\n",
+    "var pipeline = context.Auto().BinaryClassification(lgbmSearchSpace: lgbmSearchSpace);\n",
+    "\n",
+    "JsonConvert.SerializeObject(lgbmSearchSpace, Formatting.Indented)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "source": [
+    "# Create `SearchSpace` from scratch.\n",
+    "The following code shows how to create a `SearchSpace` that contains numeric, choice and nested options, where\n",
+    "- numeric option is an option that is numeric type, like float, double, int...\n",
+    "- choice option is an option that is descrete, like string or boolean.\n",
+    "- nested option is an option that itself is also a search space.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
     },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -253,8 +400,6 @@
     "nestedSearchSpace[\"IntOption\"] = new UniformIntOption(-10, 10, false, 0);\n",
     "searchSpace[\"Nest\"] = nestedSearchSpace;\n",
     "\n",
-    "// check out search space's dimension\n",
-    "Console.WriteLine(\"search space dimension: \" + searchSpace.FeatureSpaceDim);\n",
     "// pretty print search space\n",
     "JsonConvert.SerializeObject(searchSpace, Formatting.Indented)"
    ]
@@ -263,8 +408,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# create search space from attribution\n",
-    "AutoML allows you to use attribution on property to avoid creating search space from scratch. The following code shows how to create an identical search space from above except using attribution API"
+    "# create `SearchSpace<T>` which casts sampled parameter to a concrete type.\n",
+    "AutoML allows you to use attribution on property to avoid creating search space from scratch. The following code shows how to create an identical search space from above except using attribution API\n",
+    "\n",
+    "`SearchSpace<T>`, comparing with `SearchSpace`, will also cast sampled parameter to a concrete type `T` instead of `Parameter`, which saves the effort of getting specific hyper-parameter value from `Parameter`."
    ]
   },
   {
@@ -279,13 +426,6 @@
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "search space dimension: 6\r\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -404,8 +544,6 @@
     "\n",
     "var searchSpace = new SearchSpace<MyParameter>();\n",
     "\n",
-    "// check out search space's dimension\n",
-    "Console.WriteLine(\"search space dimension: \" + searchSpace.FeatureSpaceDim);\n",
     "// pretty print search space\n",
     "JsonConvert.SerializeObject(searchSpace, Formatting.Indented)"
    ]
@@ -414,10 +552,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sampling from search space\n",
-    "In HPO, what tuner does is basically sampling from search space, and pass the sampling result, a.k.a `parameter`, to trial runner. The way of how parameter sampled is what make tuners different from each other and is critial to the final optimizing result. The common tunning algorithems are random search, grid search, smac, eci-cfo and many others.\n",
+    "# Sampling `Parameter` from `SearchSpace`\n",
+    "In AutoML.Net, `SearchSpace` is associated with an `n`-dimension vector which is called `feature space`. And tuner, instead of performing sampling on original options in a `SearchSpace`, sampling from that `feature space` instead. And `SearchSpace` will then mapping the sampling result back to its options.\n",
     "\n",
-    "The following example shows how to sample from the given search space using random search, which sampling from the linear space and mapping it back to the original options."
+    "The following code shows the sampling process above, which creates an `n`-d random vector and use that vector to sample from search space. Notice that because the type of created search space is `SearchSpace`, the result sampled from `n`-d vector is `Parameter` rather than a concrete type."
    ]
   },
   {
@@ -436,12 +574,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 - {\"IntOption\":9,\"SingleOption\":7.392224,\"DoubleOption\":0.0,\"BoolOption\":true,\"StrOption\":\"b\",\"Nest\":{\"IntOption\":3}}\r\n",
-      "0 - {\"IntOption\":9,\"SingleOption\":7.392224,\"DoubleOption\":0.0,\"BoolOption\":false,\"StrOption\":\"b\",\"Nest\":{\"IntOption\":3}}\r\n",
-      "1 - {\"IntOption\":-6,\"SingleOption\":3.4464028,\"DoubleOption\":-7.0,\"BoolOption\":false,\"StrOption\":\"a\",\"Nest\":{\"IntOption\":-5}}\r\n",
-      "1 - {\"IntOption\":-6,\"SingleOption\":3.4464028,\"DoubleOption\":-7.0,\"BoolOption\":false,\"StrOption\":\"a\",\"Nest\":{\"IntOption\":-5}}\r\n",
-      "2 - {\"IntOption\":-9,\"SingleOption\":8.262646,\"DoubleOption\":-7.0,\"BoolOption\":true,\"StrOption\":\"c\",\"Nest\":{\"IntOption\":2}}\r\n",
-      "2 - {\"IntOption\":-9,\"SingleOption\":8.262646,\"DoubleOption\":-7.0,\"BoolOption\":false,\"StrOption\":\"c\",\"Nest\":{\"IntOption\":2}}\r\n"
+      "0 - {\"IntOption\":5,\"SingleOption\":1.3184657,\"DoubleOption\":2.0,\"BoolOption\":true,\"StrOption\":\"b\",\"Nest\":{\"IntOption\":4}}\r\n",
+      "0 - {\"IntOption\":5,\"SingleOption\":1.3184657,\"DoubleOption\":2.0,\"BoolOption\":false,\"StrOption\":\"b\",\"Nest\":{\"IntOption\":4}}\r\n",
+      "1 - {\"IntOption\":4,\"SingleOption\":1.8871154,\"DoubleOption\":-7.0,\"BoolOption\":true,\"StrOption\":\"b\",\"Nest\":{\"IntOption\":1}}\r\n",
+      "1 - {\"IntOption\":4,\"SingleOption\":1.8871154,\"DoubleOption\":-7.0,\"BoolOption\":false,\"StrOption\":\"b\",\"Nest\":{\"IntOption\":1}}\r\n",
+      "2 - {\"IntOption\":-2,\"SingleOption\":5.2511787,\"DoubleOption\":5.0,\"BoolOption\":false,\"StrOption\":\"b\",\"Nest\":{\"IntOption\":6}}\r\n",
+      "2 - {\"IntOption\":-2,\"SingleOption\":5.2511787,\"DoubleOption\":5.0,\"BoolOption\":false,\"StrOption\":\"b\",\"Nest\":{\"IntOption\":6}}\r\n"
      ]
     }
    ],
@@ -480,32 +618,6 @@
     "\n",
     "    Console.WriteLine($\"{i} - {json}\");\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Default search space for ml.net trainer\n",
-    "AutoML.Net comes with a series of default search space for most of ml.net trainers. You can check it under `Microsoft.ML.AutoML.CodeGen` namespace. The following code shows the default search space for LightGbm."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "using Microsoft.ML.AutoML.CodeGen;\n",
-    "var lgbmSearchSpace = new SearchSpace<LgbmOption>();\n",
-    "JsonConvert.SerializeObject(lgbmSearchSpace, Formatting.Indented)"
    ]
   },
   {
