update according to comment

--- a/machine-learning/Parameter and SearchSpace.ipynb
+++ b/machine-learning/Parameter and SearchSpace.ipynb
@@ -627,7 +627,9 @@
    "metadata": {},
    "source": [
     "# Continue learning\n",
-    "> E2E-Forecasting using SSA with Luna Dataset (create `SweepableEstimator` with custom search space)"
+    "\n",
+    "#### The following notebook shows how to create `SweepableEstimator` with custom search space.\n",
+    "> E2E-Forecasting using SSA with Luna Dataset"
    ]
   }
  ],
