add link to document

--- a/machine-learning/Parameter and SearchSpace.ipynb
+++ b/machine-learning/Parameter and SearchSpace.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "In AutoML.Net, `SearchSpace` defines the hyper-parameter searching range of a sweepable pipeline or a sweepable estimator and `Parameter` is the sampled result from a `SearchSpace`, which can be used to restore an estimator or a pipeline.\n",
+    "In AutoML.Net, [`SearchSpace`](https://docs.microsoft.com/en-us/dotnet/api/microsoft.ml.searchspace.searchspace?view=ml-dotnet-preview) defines the hyper-parameter searching range of a sweepable pipeline or a sweepable estimator and [`Parameter`](https://docs.microsoft.com/en-us/dotnet/api/microsoft.ml.searchspace.parameter?view=ml-dotnet-preview) is the sampled result from a `SearchSpace`, which can be used to restore an estimator or a pipeline.\n",
     "\n",
     "`SearchSpace` has a great impact on automl performance. In theory, it decides the upper-bound of an automl model. A larger `SearchSpace` usually means an increasing potential of finding a better model. In practice though, there's also a trade-off and a larger `SearchSpace` doesn't always to be better considering the increasing searching complexity and higher training cost.\n",
     "\n",
@@ -109,6 +109,7 @@
     "using Microsoft.ML.Data;\n",
     "using Microsoft.ML.SearchSpace;\n",
     "using Newtonsoft.Json;\n",
+    "using Microsoft.ML.AutoML.CodeGen;\n",
     "using Microsoft.ML.SearchSpace.Option;"
    ]
   },
@@ -254,7 +255,6 @@
     }
    ],
    "source": [
-    "using Microsoft.ML.AutoML.CodeGen;\n",
     "var lgbmSearchSpace = new SearchSpace<LgbmOption>();\n",
     "\n",
     "// the default option for NumberOfLeaves is (4, 32768, logBase: true)\n",
