--- a/machine-learning/05 - AutoML Sweepable API.ipynb
+++ b/machine-learning/05 - AutoML Sweepable API.ipynb
@@ -214,7 +214,7 @@
     "\n",
     "var res = await experiment.RunAsync();\n",
     "\n",
-    "// check the type of last trainer, which should be lightGbm\n",
+    "// check the type of last trainer for winning model, which should be lightGbm\n",
     "(res.Model as TransformerChain<ITransformer>).Last().GetType()"
    ]
   },
