--- a/machine-learning/05 - AutoML Sweepable API.ipynb
+++ b/machine-learning/05 - AutoML Sweepable API.ipynb
@@ -7,9 +7,9 @@
     "## AutoML Sweepable API\n",
     "\n",
     "This Notebook shows how to use `Sweepable` API to fully customize the pipeline or search space in your AutoML task. In this notebook, you will learn\n",
+    "- use built-in `SweepableEstimator` to simplify your work.\n",
     "- how to use `AutoML().CreateSweepableEstimator` to create `SweepableEstimator`.\n",
-    "- how to create `SweepablePipeline` for multiple trainer candidates.\n",
-    "- use built-in `SweepableEstimator` to simplify your work."
+    "- how to create `SweepablePipeline` for multiple trainer candidates.\n"
    ]
   },
   {
@@ -70,6 +70,33 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use built-in sweepable estimators\n",
+    "\n",
+    "`AutoML` provides built-in sweepable estimator candidates for binary-classification, multi-class classification and regression. For those scenarios, you can simply use those candidates instead of creating `SweepableEstimator` from scratch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "var regressionTrainerCandidates = context.Auto().Regression();\n",
+    "var binaryClassificationTrainerCandidates = context.Auto().BinaryClassification();\n",
+    "var multiclassClassificationTrainerCandidates = context.Auto().MultiClassification();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -78,7 +105,7 @@
    "source": [
     "#### Use `AutoML().CreateSweepableEstimator` to create `SweepableEstimator`\n",
     "\n",
-    "A `SweepableEstimator` is nothing different than a normal `Estimator` plus `SearchSpace`. The following code shows how to create a sweepable `LightGbm` and `SDCA`.\n",
+    "In case the built-in `SweepableEstimator` doesn't satisfy your requirement, you can call `CreateSweepableEstimator` to create a customized `SweepableEstimator`. A `SweepableEstimator` is nothing different than a normal `Estimator` plus `SearchSpace`. The following code shows how to create a sweepable `LightGbm` and `SDCA`.\n",
     "\n",
     "For simplicity, the built-in search space for `LightGbm` and `SDCA` is used but you can fully customize the search space however way you want. For more details on how to do that, please check [Parameter And SearchSpace](./Parameter%20and%20SearchSpace.ipynb)"
    ]
@@ -216,33 +243,6 @@
     "\n",
     "// check the type of last trainer for winning model, which should be lightGbm\n",
     "(res.Model as TransformerChain<ITransformer>).Last().GetType()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Use built-in sweepable estimators\n",
-    "\n",
-    "`AutoML` provides built-in sweepable estimator candidates for binary-classification, multi-class classification and regression. For those scenarios, you can simply use those candidates instead of creating `SweepableEstimator` from scratch."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "var regressionTrainerCandidates = context.Auto().Regression();\n",
-    "var binaryClassificationTrainerCandidates = context.Auto().BinaryClassification();\n",
-    "var multiclassClassificationTrainerCandidates = context.Auto().MultiClassification();"
    ]
   },
   {
