--- a/machine-learning/05 - AutoML Sweepable API.ipynb
+++ b/machine-learning/05 - AutoML Sweepable API.ipynb
@@ -7,7 +7,7 @@
     "## AutoML Sweepable API\n",
     "\n",
     "This Notebook shows how to use `Sweepable` API to fully customize the pipeline or search space in your AutoML task. In this notebook, you will learn\n",
-    "- use built-in `SweepableEstimator` to simplify your work.\n",
+    "- use `AutoTrainer` to simplify your work.\n",
     "- how to use `AutoML().CreateSweepableEstimator` to create `SweepableEstimator`.\n",
     "- how to create `SweepablePipeline` for multiple trainer candidates.\n"
    ]
@@ -72,9 +72,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Use built-in sweepable estimators\n",
+    "#### Use `AutoTrainer` for built-in sweepable estimator candidates.\n",
     "\n",
-    "`AutoML` provides built-in sweepable estimator candidates for binary-classification, multi-class classification and regression. For those scenarios, you can simply use those candidates instead of creating `SweepableEstimator` from scratch."
+    "`AutoTrainer` provides built-in sweepable estimator candidates for binary-classification, multi-class classification and regression. For those scenarios, you can simply use those candidates instead of creating `SweepableEstimator` from scratch."
    ]
   },
   {
@@ -90,6 +90,7 @@
    },
    "outputs": [],
    "source": [
+    "var context = new MLContext();\n",
     "var regressionTrainerCandidates = context.Auto().Regression();\n",
     "var binaryClassificationTrainerCandidates = context.Auto().BinaryClassification();\n",
     "var multiclassClassificationTrainerCandidates = context.Auto().MultiClassification();"
@@ -123,7 +124,6 @@
    },
    "outputs": [],
    "source": [
-    "var context = new MLContext();\n",
     "var lgbmSearchSpace = new SearchSpace<LgbmOption>();\n",
     "var sweepableLgbm = context.Auto().CreateSweepableEstimator((context, param) => {\n",
     "    var option = new LightGbmRegressionTrainer.Options()\n",
